[package]
name = "peaq-pallet-storage"
version = "0.1.1"
edition = "2021"
description = 'A pallet that handles IPFS CID storage'
authors = ['peaq network <https://github.com/peaqnetwork>']
homepage = 'https://peaq.network/'
# license = 'Apache-2.0'
publish = false
repository = ''

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = 'https://github.com/peaqnetwork/substrate', branch = 'peaq-polkadot-v0.9.29' }
frame-system = { default-features = false, git = 'https://github.com/peaqnetwork/substrate', branch = 'peaq-polkadot-v0.9.29' }
scale-info = { default-features = false, features = ['derive'], version = '2.0.1' }
sp-runtime = { default-features = false, git = 'https://github.com/peaqnetwork/substrate', branch = 'peaq-polkadot-v0.9.29' }
sp-core = { default-features = false, git = 'https://github.com/peaqnetwork/substrate', branch = 'peaq-polkadot-v0.9.29' }
sp-io = { default-features = false, git = 'https://github.com/peaqnetwork/substrate', branch = 'peaq-polkadot-v0.9.29' }
sp-std = { default-features = false, git = 'https://github.com/peaqnetwork/substrate', branch = 'peaq-polkadot-v0.9.29' }
frame-benchmarking = { default-features = false, git = 'https://github.com/peaqnetwork/substrate', optional = true, branch = 'peaq-polkadot-v0.9.29' }

[dev-dependencies]
hex-literal = '0.3.3'

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
	'sp-runtime/std',
    'sp-std/std',
	'sp-io/std',
    'sp-core/std',	
]
try-runtime = ['frame-support/try-runtime']
