[workspace.package]
authors = ["EoTLabs <info@eotlabs.io>"]
edition = "2021"
version = "0.2.0"
description = "peaq storage pallet and rpc interface."
homepage = "https://peaq.network/"
license = "Apache-2.0"
publish = false
repository = "https://github.com/peaqnetwork/peaq-pallet-storage/"

[workspace]
members = [
	"pallet",
    "rpc",
	"rpc/runtime-api",
]
resolver = "2"


