[workspace.package]
authors = ["EoTLabs <info@eotlabs.io>"]
edition = "2021"
version = "0.2.1"
description = "peaq storage pallet and rpc interface."
homepage = "https://peaq.network/"
license = "Apache-2.0"
publish = false
repository = "https://github.com/peaqnetwork/peaq-pallet-storage/"

[workspace.dependencies]
hex-literal = "0.3.3"

parity-scale-codec = { version = "3.2.2", default-features = false }
frame-support = { default-features = false, git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
frame-system = { default-features = false, git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
scale-info = { default-features = false, version = "2.0.1" }
sp-runtime = { default-features = false, git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-core = { default-features = false, git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-io = { default-features = false, git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-std = { default-features = false, git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
frame-benchmarking = { default-features = false, git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-api = { default-features = false, git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-blockchain = { default-features = false, git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-rpc = { default-features = false, git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "release-polkadot-v1.1.0" }

serde = "1.0.136"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpsee = { version = "0.16.2" }

serde_json = "1.0"

[workspace]
members = [
	"pallet",
    "rpc",
	"rpc/runtime-api",
]
resolver = "2"


