[package]
name = "peaq-pallet-storage"
edition = { workspace = true }
version = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
frame-system = { default-features = false, git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
scale-info = { default-features = false, features = ["derive"], version = "2.0.1" }
sp-runtime = { default-features = false, git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-core = { default-features = false, git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-io = { default-features = false, git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-std = { default-features = false, git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
frame-benchmarking = { default-features = false, git = "https://github.com/peaqnetwork/substrate", optional = true, branch = "peaq-polkadot-v0.9.43" }

[dev-dependencies]
hex-literal = "0.3.3"

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
	"sp-runtime/std",
    "sp-std/std",
	"sp-io/std",
    "sp-core/std",
	
]
try-runtime = ["frame-support/try-runtime"]
