[package]
name = "peaq-pallet-storage"
edition = { workspace = true }
version = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, default-features = false, features = ["derive"] }
frame-support = { default-features = false, workspace = true }
frame-system = { default-features = false, workspace = true }
scale-info = { default-features = false, features = ["derive"], workspace = true }
sp-runtime = { default-features = false, workspace = true }
sp-core = { default-features = false, workspace = true }
sp-io = { default-features = false, workspace = true }
sp-std = { default-features = false, workspace = true }
frame-benchmarking = { default-features = false, optional = true, workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
	"sp-runtime/std",
    "sp-std/std",
	"sp-io/std",
    "sp-core/std",
	
]
try-runtime = ["frame-support/try-runtime"]
